ativos/estilos/estilo.css
/* ... */
.escalar-curriculo .habilidades_conteudo {
    gap: 0.25rem;
}

.escalar-curriculo .habilidades_barra {
    width: 100px;
    height: 8px;
    border-radius: 4px;
}

.escalar-curriculo .habilidades_progresso {
    height: 8px;
    border-radius: 4px;
    transform: translate(0.01px, 0);
}

.escalar-curriculo .idiomas_conteudo {
    gap: 0.25rem;
}

.escalar-curriculo .idiomas_texto {
    width: 115px;
}

/* Corpo */

body {
    margin: 0 0 var(--altura-cabecalho) 0;
    padding: 0;
    font-family: var(--fonte-corpo);
    font-size: var(--tamanho-fonte-normal);
    background-color: var(--cor-corpo);
    color: var(--cor-texto);
}

h1,
h2,
h3,
ul,
p {
    margin: 0;
}

h1,
h2,
h3 {
    color: var(--cor-titulo);
    font-weight: var(--fonte-media);
}

ul {
    padding: 0;
    list-style: none;
}

a {
    text-decoration: none;
}

img {
    max-width: 100%;
    height: auto;
}

/* Classes CSS */

.section {
    padding: 1.5rem 0;
}

.section-titulo {
    font-size: var(--tamanho-fonte-h2);
    color: var(--cor-titulo);
    font-weight: var(--fonte-semi-negrito);
    text-transform: uppercase;
    letter-spacing: .35rem;
    text-align: center;
    margin-bottom: var(--margem-3);
}

/* Layout */

.bd-container {
    max-width: 968px;
    width: calc(100% - 3rem);
    margin-left: var(--margem-3);
    margin-right: var(--margem-3);
}

.bd-grid {
    display: grid;
    gap: 1.5rem;
}

.l-cabecalho {
    width: 100%;
    position: fixed;
    bottom: 0;
    left: 0;
    z-index: var(--z-fixo);
    background-color: var(--cor-corpo);
    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.1);
    transition: all 0.5s ease;
}

/* Navegação */

.navegacao {
    height: var(--altura-cabecalho);
    display: flex;
    justify-content: space-between;
    align-items: center;
}

@media screen and (max-width: 968px) {
    .navegacao_menu {
        position: fixed;
        bottom: -100%;
        left: 0;
        width: 100%;
        padding: 2rem 1.5rem;
        background-color: var(--cor-corpo);
        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
        border-radius: 1rem 1rem 0 0;
        z-index: var(--z-fixo);
        transition: all 0.5s ease;
    }
    .navegacao {
        justify-content: flex-start;
        position: relative;
    }
    .navegacao_logo {
        position: absolute;
        left: 50%;
        transform: translateX(-50%);
    }
    .navegacao_toggle {
        order: -1;
        margin-right: var(--margem-3);
    }
    .gerar-pdf {
        display: none !important;
    }
}

.navegacao_logo,
.navegacao_toggle {
    color: var(--cor-titulo);
    font-weight: var(--fonte-media);
}

.navegacao_toggle {
    font-size: 1.2rem;
    cursor: pointer;
}

.navegacao_lista {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 2rem;
}

.navegacao_item {
    text-align: center;
}

.navegacao_link {
    display: flex;
    flex-direction: column;
    font-size: var(--tamanho-fonte-menor);
    color: var(--cor-texto-claro);
    font-weight: var(--fonte-media);
}

.navegacao_link:hover {
    color: var(--cor-titulo);
}

.navegacao_icone {
    font-size: 1.2rem;
    margin-bottom: var(--margem-1);
}

/* Mostrar menu */

.mostrar-menu {
    bottom: var(--altura-cabecalho);
}

/* Link de menu ativo */

.active-link {
    color: var(--cor-titulo);
}

/* Página inicial */

.inicio {
    position: relative;
}

.inicio_container {
    gap: 3rem;
}

.inicio_dados {
    gap: .5rem;
    text-align: center;
}

.inicio_imagem {
    position: relative;
    width: 120px;
    height: 120px;
    border-radius: 50%;
    justify-self: center;
    margin-bottom: var(--margem-1);
}

.inicio_titulo {
    font-size: var(--tamanho-fonte-h1);
}

.inicio_profissao,
.inicio_condicao {
    font-size: var(--tamanho-fonte-normal);
    /* margem removida para usar o espaçamento do grid */
    display: inline-block;
}

.inicio_endereco {
    gap: 1rem;
}

.inicio_informacao {
    display: flex;
    align-items: center;
    font-size: var(--tamanho-fonte-pequeno);
}

.inicio_icone {
    font-size: 1.2rem;
    display: flex;
    width: 25px;
    justify-content: center;
    margin-right: 0.75rem;
}

.inicio_link {
    display: inline-flex;
    align-items: center;
    font-size: var(--tamanho-fonte-pequeno);
    color: var(--cor-texto);
}

.inicio_link:hover {
    color: var(--cor-titulo);
}

.inicio_botao-movel {
    display: inline-block;
    border: 2px solid var(--cor-texto);
    color: var(--cor-titulo);
    padding: 1rem 2rem;
    border-radius: .25rem;
    transition: all 0.5s ease;
    font-weight: var(--fonte-media);
    margin-top: var(--margem-3);
}

.inicio_botao-movel:hover {
    background-color: var(--cor-texto);
    color: var(--cor-container);
}

/* Página de redes sociais */

.redes-sociais_container {
    grid-template-columns: max-content;
    gap: 1rem;
}

.redes-sociais_link {
    display: inline-flex;
    align-items: center;
    font-size: var(--tamanho-fonte-pequeno);
    color: var(--cor-texto);
}

.redes-sociais_link:hover {
    color: var(--cor-titulo);
}

.redes-sociais_icone {
    font-size: 1.2rem;
    display: flex;
    width: 25px;
    justify-content: center;
    margin-right: 0.75rem;
}

/* Página de perfil */

.perfil_descricao {
    text-align: center;
}

/* Páginas de educação, experiência e certificados */

.educacao_conteudo,
.experiencia_conteudo,
.certificados_conteudo {
    display: flex;
}

.educacao_tempo,
.experiencia_tempo,
.certificados_item {
    padding-right: 1rem;
}

.educacao_circulo,
.experiencia_circulo {
    position: relative;
    display: block;
    width: 16px;
    height: 16px;
    background-color: var(--cor-texto-claro);
    border-radius: 50%;
    margin-top: .25rem;
}

.educacao_linha,
.experiencia_linha {
    display: block;
    width: 2px;
    height: 115%;
    background-color: var(--cor-texto-claro);
    transform: translate(7px, 0);
}

.educacao_dados,
.experiencia_dados,
.certificados_dados {
    gap: .35rem;
}
/* ... */

